# flashwise

./: README.md  db.sqlite3  manage.py  pyproject.toml
api/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_category_slug_alter_flashcardsset_slug.py  0003_quiz_quizanswer_quizquestion_quizanswer_question_and_more.py  0004_alter_user_options_alter_user_managers_and_more.py  0005_author_alter_flashcard_author_and_more.py  0006_remove_author_user_alter_flashcard_author_and_more.py  0007_alter_flashcard_author_alter_flashcardsset_author_and_more.py  0008_alter_flashcard_author_alter_flashcardsset_author_and_more.py  0009_remove_quizanswer_correct_answer_and_more.py  0010_quizanswer_letter.py  0011_remove_flashcardsset_slug.py
quizlet_clone/: api.py  asgi.py  settings.py  urls.py  wsgi.py
